fixed the double scroll bar

--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 * {
   margin: 0;
   padding: 0;
-  overflow-x: hidden;
   color: rgb(0, 0, 0);
+}
+
+html, body {
+  overflow-x: hidden;
+  overflow-y: auto;
+  height: 100%;
 }
 
 #grid{
@@ -44,6 +49,7 @@
     color: white;
     left: 10vw;
     top: 30px;
+    max-width: calc(100vw - 10vw);
 }
 
 #tickSpeed{
